# spacetime

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
lib/: CMakeLists.txt  SpaceTimeConfig.cmake.in
opencog/: CMakeLists.txt
opencog/cython/: README.md
opencog/cython/opencog/: CMakeLists.txt  spacetime.pyx  spacetime_types.pyx
opencog/spacetime/: CMakeLists.txt
opencog/spacetime/atom-types/: CMakeLists.txt  atom_types.script  spacetime.scm
opencog/spacetime/octomap/: AtomOcTreeNode.h  CMakeLists.txt  OctoMapNode.cc  OctoMapNode.h  octomap.scm
opencog/spacetime/pointmemory/: pointmem.scm
tests/: CMakeLists.txt
tests/spacetime/: CMakeLists.txt
